# projkt

./: .envrc  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/commands/projkt/: app.py  config.py  constants.py  defaults.py  helpers.py
src/commands/projkt/controllers/: base.py  new.py
src/templates/base/{{ cookiecutter.project_slug }}/: README.md
src/templates/basic/: cookiecutter.json
src/templates/basic/{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
src/templates/basic/{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
src/templates/basic/{{ cookiecutter.project_slug }}/.devcontainer/hooks/: post_attach.sh
src/templates/container/: cookiecutter.json
src/templates/container/{{ cookiecutter.project_slug }}/: .envrc  .gitignore  LICENSE  Makefile  README.md
src/templates/container/{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
src/templates/container/{{ cookiecutter.project_slug }}/.github/workflows/: pipeline.yml
src/templates/container/{{ cookiecutter.project_slug }}/src/: Dockerfile  Dockerfile.test
src/templates/container/{{ cookiecutter.project_slug }}/tests/: unittest.bats
src/util/terminal/: prompt.py
tests/: test_app.py
